--- a/application/views/layouts/index.phtml
+++ b/application/views/layouts/index.phtml
@@ -24,7 +24,12 @@
     <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
 </head>
-<body class="main">
+<body>
+
+    <div class="header">
+        <img src="img/sys-logo.png" class="logo" />
+        <? //echo $this->Menu(); ?>
+    </div>
 
 </body>
 </html>
