--- a/application/views/layouts/index.phtml
+++ b/application/views/layouts/index.phtml
@@ -9,7 +9,7 @@
     <title>Regions.ru</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <? $this->headScript()->appendFile("/js/libs/modernizr-2.0.6.min.js", 'text/javascript')->appendFile("/js/rg.js", 'text/javascript'); ?>
+    <? $this->headScript()->appendFile("/js/libs/modernizr-2.0.6.min.js", 'text/javascript')->appendFile("/js/script.js", 'text/javascript'); ?>
     <? $this->headLink()->prependStylesheet("/css/style.css"); ?>
     <? echo $this->headMeta()->appendHttpEquiv('Content-Type', 'text/html; charset=UTF-8'); ?>
     <? echo $this->headTitle(); ?>
@@ -21,14 +21,14 @@
     <link rel="stylesheet" type="text/css" href="/css/paginator3000.css" media="all">
     <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/libs/jquery-1.6.2.min.js"><\/script>')</script>
+    <script>window.jQuery || document.write('<script src="/js/libs/jquery-1.6.2.min.js"><\/script>')</script>
 
 </head>
 <body>
 
     <div class="header">
-        <img src="img/sys-logo.png" class="logo" />
-        <? //echo $this->Menu(); ?>
+        <div class="logo"><img src="/img/sys-logo.png" class="logo" /></div>
+        <div class="menu"><? echo $this->MainMenu(); ?></div>
     </div>
 
 </body>
