--- a/application/views/layouts/index.phtml
+++ b/application/views/layouts/index.phtml
@@ -31,5 +31,7 @@
         <div class="menu"><? echo $this->MainMenu(); ?></div>
     </div>
 
+    <div class="content"><? echo $this->layout()->content; ?></div>
+
 </body>
 </html>
