--- a/application/views/scripts/tpl/view.phtml
+++ b/application/views/scripts/tpl/view.phtml
@@ -3,5 +3,5 @@
 <? $oTpl = $this->oTpl; ?>
 
 <div class="form-wrapper">
-    <? \Utils::printr($oTpl); exit(); ?>
+    <? echo $this->oForm; ?>
 </div>
