--- a/application/views/scripts/tpl/list.phtml
+++ b/application/views/scripts/tpl/list.phtml
@@ -5,19 +5,18 @@
 <? /* @var $oModel Domain\Collection\Template */ ?>
 <? $oList = $oModel->getCollection('list'); ?>
 
-<div class="list-wrapper">
-    <table class="list" cellspacing="0" border="0">
+<ul class="submenu">
+    <li><a href="/tpl/new">Добавить новый шаблон</a></li>
+</ul>
+
+<ul class="list template-list">
 
 <? $index = 0 ?>
 <? /* @var $oTpl Domain\Entity\Template */ ?>
 <? foreach ($oList AS $oTpl): ?>
 
-        <tr class="<? echo $index++ % 2 ? 'odd' : 'even' ?>">
-            <td><? echo $oTpl->id ?></td>
-            <td><a href="/tpl/<? echo $oTpl->id ?>"><? echo $oTpl->name ?></a></td>
-        </tr>
+    <li><a href="/tpl/<? echo $oTpl->id ?>"><? echo $oTpl->name ?></a> <a href="/tpl/rm/<? echo $oTpl->id ?>" onclick="return confirm('Нажмите OK, если вы хотите удалить шаблон\n<? echo preg_replace('/[\'"]/ims', '&quot;', $oTpl->name) ?>')">Удалить</a></li>
 
 <? endforeach; ?>
 
-    </table>
-</div>
+</ul>
