--- a/application/views/scripts/tpl/list.phtml
+++ b/application/views/scripts/tpl/list.phtml
@@ -15,7 +15,7 @@
 <? /* @var $oTpl Domain\Entity\Template */ ?>
 <? foreach ($oList AS $oTpl): ?>
 
-    <li><a href="/tpl/<? echo $oTpl->id ?>"><? echo $oTpl->name ?></a> <a href="/tpl/rm/<? echo $oTpl->id ?>" onclick="return confirm('Нажмите OK, если вы хотите удалить шаблон\n<? echo preg_replace('/[\'"]/ims', '&quot;', $oTpl->name) ?>')">Удалить</a></li>
+    <li><a href="/tpl/<? echo $oTpl->id ?>"><? echo $oTpl->name ?></a> <a href="/tpl/rm/<? echo $oTpl->id ?>" onclick="return confirm('Нажмите OK, если вы хотите удалить шаблон\n<? echo preg_replace('/[\'"]/ims', '&quot;', $oTpl->name) ?> полностью')">Удалить</a></li>
 
 <? endforeach; ?>
 
