--- a/application/views/scripts/group/list.phtml
+++ b/application/views/scripts/group/list.phtml
@@ -24,6 +24,7 @@
 
 <? endif; ?>
 
+        <span class="user-count">(<? echo $oGroup->getChildTotalCount('user') ?>)</span>
     </li>
 
 <? endforeach; ?>
