--- a/application/views/scripts/tpl/view.phtml
+++ b/application/views/scripts/tpl/view.phtml
@@ -2,6 +2,6 @@
 <? /* @var $oTpl Domain\Entity\Template */ ?>
 <? $oTpl = $this->oTpl; ?>
 
-<div class="form-wrapper">
+<div class="form-wrapper tpl-form">
     <? echo $this->oForm; ?>
 </div>
