--- a/application/views/layouts/index.phtml
+++ b/application/views/layouts/index.phtml
@@ -6,25 +6,16 @@
 <!--[if IE 9]>    <html class="no-js ie9" lang="en"> <![endif]-->
 <!--[if gt IE 9]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
-    <title>Regions.ru</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="/js/libs/jquery-1.7.2.min.js"><\/script>')</script>
-
-    <? $this->headLink()->prependStylesheet("/css/style.css"); ?>
-    <? echo $this->headMeta()->appendHttpEquiv('Content-Type', 'text/html; charset=UTF-8'); ?>
     <? echo $this->headTitle(); ?>
+    <? echo $this->headMeta(); ?>
     <? echo $this->headLink(); ?>
     <? echo $this->headStyle(); ?>
     <? echo $this->headScript(); ?>
-    <? $this->headScript()->appendFile("/js/script.js", 'text/javascript'); ?>
 </head>
 <body>
 
     <div class="header">
-        <div class="logo"><img src="/img/sys-logo.png" class="logo" /></div>
+<!--        <div class="logo"><img src="/img/sys-logo.png" class="logo" /></div>-->
         <div class="menu"><? echo $this->MainMenu(); ?></div>
     </div>
 
