--- a/application/views/scripts/group/list.phtml
+++ b/application/views/scripts/group/list.phtml
@@ -18,13 +18,20 @@
     <li>
         <a href="/group/<? echo $oGroup->id ?>"><? echo $oGroup->name ?></a>
 
+
+
+<? if ($count = $oGroup->getChildTotalCount('user')): ?>
+
+        <span class="user-count">(<? echo $count ?>)</span>
+
+<? endif; ?>
+
 <? if (!$oGroup->algo): ?>
 
         <a href="/group/rm/<? echo $oGroup->id ?>" onclick="return confirm('Нажмите OK, если вы хотите удалить группу\n<? echo preg_replace('/[\'"]/ims', '&quot;', $oGroup->name) ?> полностью')">Удалить</a>
 
 <? endif; ?>
 
-        <span class="user-count">(<? echo $oGroup->getChildTotalCount('user') ?>)</span>
     </li>
 
 <? endforeach; ?>
