--- a/application/views/scripts/task/finalize.phtml
+++ b/application/views/scripts/task/finalize.phtml
@@ -1,5 +1,9 @@
-
-Свершилось!
-
-Метрика:
-<? \Utils::printr($this->ddd); ?>
+<? if ($this->result): ?>
+<h1>Свершилось!</h1>
+<p>Задача поставлена.</p>
+<p><a href="/task/<? echo $this->result ?>">Перейти на страницу информации</a></p>
+<? else: ?>
+<h1>Что-то пошло не по-плану!</h1>
+<p>Задача не поставлена.</p>
+<p><a href="/task/new">Попробуете еще раз?</a></p>
+<? endif; ?>
