--- a/html/css/style.css
+++ b/html/css/style.css
@@ -358,6 +358,18 @@ s.ie7 body {
 
 
 
+.form-wrapper FIELDSET
+{
+    border: 1px solid;
+    padding: 0 20px;
+}
+
+.form-wrapper FIELDSET LEGEND
+{
+    border: 1px solid;
+    margin: 0 -10px;
+    padding: 10px;
+}
 
 
 .form-wrapper TEXTAREA
