--- a/application/views/layouts/index.phtml
+++ b/application/views/layouts/index.phtml
@@ -16,7 +16,15 @@
 
     <div class="header">
 <!--        <div class="logo"><img src="/img/sys-logo.png" class="logo" /></div>-->
-        <div class="menu"><? echo $this->MainMenu(); ?></div>
+        <div class="menu">
+<ul>
+    <li><a href="/task/new">Поставить задачу</a></li>
+    <li><a href="/task/list">История задач</a></li>
+    <li><a href="/group/list">Группы пользователей</a></li>
+    <li><a href="/tpl/list">Шаблоны</a></li>
+</ul></div>
+    </div>
+
     </div>
 
     <div class="content"><? echo $this->layout()->content; ?></div>
