--- a/html/css/style.css
+++ b/html/css/style.css
@@ -518,3 +518,13 @@ s.ie7 body {
 {
     background-color: #90ee90;
 }
+
+.list UL
+{
+    margin-left: 50px;
+}
+
+.submenu
+{
+    margin: 30px 0;
+}
